
2013-08-13	tboggs <tboggs@users.sourceforge.net>

    Added `imshow` wrapper around matplotlib's imshow.

    * graphics/__init__.py: Import `imshow`.
    * graphics/graphics.py(imshow): New function.

    Automatically determine image format in `save_rgb`.

    * graphics/graphics(save_rgb): Let PIL determine image format.

2013-08-12	tboggs <tboggs@users.sourceforge.net>

    Added windowed mode to the RX anomaly detector.

    * algorithms/__init__.py: Import `MatchedFilter` and `rx`.
    * algorithms/detectors.py:
      (RXW): New class for windowed RX algorithm.
      (rx): New function for implementing RX, creating an `RX` or `RXW`
      object, as needed.
      (window_mask_creator): New function for creating image window masks.
      (rx_numpy_masked_arrays): A new file, promptly deleted, which used
      numpy.ma for masked arrays but was ~8x slower than just extracting
      pixels from the window.
      (window_mask_creator_numpy_masked_arrays): Mask creator for the
      `rx_numpy_masked_arrays` function.

2013-08-10	tboggs <tboggs@users.sourceforge.net>

    Accept ndarray as `top` keyword in view_cube.

    * graphics/graphics.py:
      (view_cube): Update doc string.
      (get_rgb): Handle case where an ImageArray may have len(shape) < 3.
      This can happen with the result of calling __getitem__ on an ImageArray.
    * graphics/hypercube.py (HypercubeWindow.load_textures): Check if `top`
      keyword is an ndarray.

    Cast ImageArray method results to non-ImageArray types. This prevents
    misinterpretation by other functions regarding the content of these data
    items

    * spectral/spectral.py:
      (ImageArray.read_band): Cast result to ndarray.
      (ImageArray.read_bands): Cast result to ndarray.
      (ImageArray.read_pixel): Cast result to ndarray.
      (ImageArray.read_datum): Cast result to scalar.
    
2013-08-09	tboggs <tboggs@users.sourceforge.net>

    Added new memmap interface for SpyFile objects.
